tests/snapshots/snapshots__go_sample_snapshot.snap
---
source: tests/snapshots.rs
expression: output
---
sample.go
     7→type Token
    13→type TokenKind
    16→	Ident
    17→	Number
    18→	Symbol
    22→type Visitor
    28→func Process
    32→func helper
    35→type TokenParser
    41→func NewTokenParser
    46→func (p *TokenParser[T]) Parse
    50→func (p *TokenParser[T]) advance
    53→type Span
    55→const MaxTokens
    57→var Version
    60→func (t Token) String
