tests/snapshots/snapshots__interface_with_inline_comment_level2.snap
---
source: tests/snapshots.rs
expression: output
---
api.ts
     2→export interface Options extends Base { // eslint-disable-line
     8→export interface Config {
    13→export function fetch(url: string): Promise<Response> { // main entry
