tests/snapshots/snapshots__java_sample_budget_10000.snap
---
source: tests/snapshots.rs
expression: output
---
Token.java
    12→public class Token …
    42→public interface Visitor …
    50→public enum TokenKind …
    51→    IDENT,
    52→    NUMBER,
    53→    SYMBOL;
    54→
    55→    public String display() {
    56→        return name().toLowerCase();
    57→    }
    58→}
    60→public record Span …
    62→@interface Generated …
