tests/snapshots/snapshots__java_sample_budget_20.snap
---
source: tests/snapshots.rs
expression: output
---
Token.java
    12→public class Token {
    42→public interface Visitor {
