tests/snapshots/snapshots__java_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
Token.java
    12→public class Token …
    42→public interface Visitor …
    50→public enum TokenKind …
    60→public record Span …
