tests/snapshots/snapshots__javascript_sample_budget_20.snap
---
source: tests/snapshots.rs
expression: output
---
sample.js
     7→export function processItems(items) {
