tests/snapshots/snapshots__javascript_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
sample.js
     3→ * Process all items and return the total count.
     4→ * @param {Array} items - The items to process.
     5→ * @returns {number} The count of items.
     7→export function processItems(items) {
     8→    return items.length;
     9→}
    11→function helper() {}
    14→ * A parser that tokenizes input strings.
    16→export class TokenParser …
    28→export const MAX_TOKENS …
    30→export default class DefaultExport …
