tests/snapshots/snapshots__javascript_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
sample.js
     7→export function processItems(items) {
    16→export class TokenParser …
    17→    constructor(input) {
    21→    parse() {
