tests/snapshots/snapshots__javascript_sample_level10.snap
---
source: tests/snapshots.rs
expression: output
---
sample.js
     2→/**
     3→ * Process all items and return the total count.
     4→ * @param {Array} items - The items to process.
     5→ * @returns {number} The count of items.
     6→ */
     7→export function processItems(items) {
    11→function helper() {}
    13→/**
    14→ * A parser that tokenizes input strings.
    15→ */
    16→export class TokenParser {
    17→    constructor(input) {
    18→        this.tokens = [];
    19→    }
    20→
    21→    parse() {
    22→        return this.tokens;
    23→    }
    24→
    25→    #advance() {}
    26→}
    28→export const MAX_TOKENS = 1024;
    30→export default class DefaultExport {
    31→    name = "";
    32→}
